# INF4705

./: .gitignore
TP1/: CMakeLists.txt  counting.cpp  data.csv  data.csv~  merge.cpp  mergeSeuil.cpp  selection.cpp  selection.sh  selection.sh~  seuil.sh
TP2/: dynamique.csv  recuit.csv  vorace.csv
TP2/src/com/inf4705/: Bloc.java  Dynamique.java  Main.java  RecuitSimule.java  Vorace.java
TP2/tp2-H15-donnees/: b100k_1  b100k_2  b100k_3  b100k_4  b100k_6  b100k_7  b100k_8  b10k_1  b10k_5  b10k_8  b10k_9  b1k_1  b1k_2  b1k_5  b1k_7  b1k_8  b500_0  b500_2  b500_3  b500_5  b500_6  b500_9  b50k_7  b50k_9  b5k_0  b5k_1  b5k_2  b5k_4  b5k_6  b5k_9
TP3/: Bloc.cpp  Bloc.h  BlocNode.cpp  BlocNode.h  CMakeLists.txt  MetaHeuristique.cpp  MetaHeuristique.h  algo.cpp  algo.h  blocrotation.cpp  blocrotation.h  dynamique.cpp  dynamique.h  graph.cpp  graph.h  main.cpp  vorace.cpp  vorace.h
TP3/tp2-H15-donnees/: TP3.exe.stackdump  b100k_0  b100k_5  b100k_9  b10k_0  b10k_2  b10k_3  b10k_4  b10k_6  b10k_7  b1k_0  b1k_3  b1k_4  b1k_6  b1k_9  b500_1  b500_4  b500_7  b500_8  b50k_0  b50k_1  b50k_2  b50k_3  b50k_4  b50k_5  b50k_6  b50k_8  b5k_3  b5k_5  b5k_7  b5k_8  param.csv
